<resources>
    <string name="app_name">Assignment 1</string>
    <string name="intro">Photorush</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signUp">Sign up</string>

    <!-- fragment names -->
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>


    <!-- Share activity -->
    <string name="string_share">Share</string>


    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="selected_uri">selected_uri</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="auto_hashtag">Auto Hashtag</string>


    <!-- Firebase messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">Users</string>
    <string name="dbname_photos">Photos</string>
    <string name="dbname_user_photos">User_photos</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>

    <!-- photo types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>
    <string name="photo_added">photo_added</string>
    <string name="activity_number">activity_number</string>
    <string name="photo">photo</string>
    <string name="view_post_fragment">view_post_fragment</string>
    <string name="view_comments_fragment">view_comments_fragment</string>
    <string name="field_comments">field_comments</string>
    <string name="dbname_comments">comments</string>
    <string name="field_photo_id">photo_id</string>
    <string name="feed_fragment">feed_fragment</string>


</resources>
